--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
             android:name=".NoteEditor"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name=".Configuration"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
