--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,73 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NoteKeeper">
-        <activity
-            android:name=".LoggedOut"
-            android:exported="false" />
-        <activity
-            android:name=".ChangePassword"
-            android:exported="false" />
-        <activity
-            android:name=".NoteShare"
-            android:exported="false" />
-        <activity
-            android:name=".NoteAgenda"
-            android:exported="false" />
-        <activity
-            android:name=".NoteEditor"
-            android:exported="false" />
-        <activity
-            android:name=".Bin"
-            android:exported="false" />
-        <activity
-            android:name=".SignIn"
-            android:exported="false" />
-        <activity
-            android:name=".LogIn"
-            android:exported="false" />
-        <activity
-            android:name=".Agenda"
-            android:exported="false" />
-        <activity
-            android:name=".Profile"
-            android:exported="false" />
-        <activity
-            android:name=".cerrar_sesion"
-            android:exported="false" />
-        <activity
-            android:name=".edit_contrasenya"
-            android:exported="false" />
-        <activity
-            android:name=".perfil"
-            android:exported="false" />
-        <activity
-            android:name=".nota_compartir"
-            android:exported="false" />
-        <activity
-            android:name=".iniciar_sesion"
-            android:exported="false" />
-        <activity
-            android:name=".nota_agenda"
-            android:exported="false" />
-        <activity
-            android:name=".compartir"
-            android:exported="false"
-            android:label="@string/title_activity_compartir"
-            android:theme="@style/Theme.NoteKeeper" />
-        <activity
-            android:name=".agenda"
-            android:exported="false"
-            android:label="@string/title_activity_agenda"
-            android:theme="@style/Theme.NoteKeeper" />
-        <activity
-            android:name=".registro"
-            android:exported="false" />
-        <activity
-            android:name=".papelera"
-            android:exported="false" />
+        android:theme="@style/Theme.notekeeper">
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.App.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -84,12 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Configuration"
-            android:exported="true" />
-        <activity
-            android:name=".NoteBin"
-            android:exported="true" />
     </application>
 
 </manifest>
